# personal_brain

./: .env.example  .gateway-token  .gitignore  AGENTS.md  CONSTRAINTS.md  DEPLOY.md  Dockerfile  Dockerfile.pb  README.md  api_server.py  code_manager.py  docker-compose.yml  event_bus.py  main.py  openclaw-integration.md  openclaw.json  opencode_config.json  personal_brain.txt  pyproject.toml
.github/workflows/: Dockerfile  sync.yml
agent/: person_agent.py  task_agent.py
dao/: person_dao.py  task_dao.py
data/: brain_data.db
db_model/: base_model.py
interaction/: interaction_layer.py
opencode-executor/: index.ts  openclaw.plugin.json  package.json  plugin.json
service/: person_service.py  task_service.py
skills/personal-brain-guard/: SKILL.md
src/: api_server.py  code_manager.py  event_bus.py  main.py
src/agent/: person_agent.py  task_agent.py
src/dao/: person_dao.py  task_dao.py
src/db_model/: base_model.py
src/interaction/: interaction_layer.py
src/service/: person_service.py  task_service.py
